--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,7 +1,18 @@
 <%- include('../partials/html-head') %>
 <link rel="stylesheet" href="/stylesheets/stylesheets/flights/new.css">
 <%- include('../partials/nav') %> 
-
-
-
+<main>
+  <h1><%= title %></h1>
+  <form id="new-form" action="/flights" method="POST">
+    <label for="airline-input">Airline:</label>
+    <input type="text" name="airline" id="airline-input">
+    <label for="airport-input">Airport:</label>
+    <input type="text" name="airport" id="airport-input">
+    <label for="flightno-input">FlightNo:</label>
+    <input type="number" name="flightno" id="flightno-input" min="0" max="9999">
+    <label for="departs-input">Departs:</label>
+    <input type="date" name="departs" id="departs-input">
+    <button type="submit">Add Flight</button>
+  </form>
+</main>
 <%- include('../partials/footer') %> 
