--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -4,13 +4,13 @@
 
 <main>
   <h1>Flight List</h1>
-  <table>
+  <table id="list">
     <thead>
       <tr>
         <th>Airline</th>
         <th>Airport</th>
-        <th>Flight Number</th>
-        <th>Departs</th>
+        <th></th>
+        <th></th>
       </tr>
     </thead>
     <tbody>
@@ -20,8 +20,15 @@
         <tr>
           <td><%= flight.airline %></td>
           <td><%= flight.airport %></td>
-          <td><%= flight.flightno %></td>
-          <td><%= flight.departs %></td>
+          <td><a href="/flights/<%= flight._id %>">Details</a></td>
+          <td>
+            <form 
+              action="/flights/<%= flight._id %>?_method=DELETE" 
+              method="POST"
+            >
+              <button>X</button>
+          </form>
+        </td>
           <%# finish the ternary expression to display 'Yes' or 'Nope' %> 
         </tr>
         <%# Close the forEach using EJS here %>
