--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -13,6 +13,9 @@
     <div><%= flight.flightno %></div>
     <div>Departs: </div>
     <div><%= flight.departs %></div>
+    <a href="/flights/<%= flight._id %>">
+      <button> Edit Flight</button>
+    </a>
   </section>
 </main>
   
