--- a/views/flights/show.ejs
+++ b/views/flights/show.ejs
@@ -17,6 +17,19 @@
       <button> Edit Flight</button>
     </a>
   </section>
+  <h2>Tickets</h2>
+  <form
+    id="add-ticket-form" 
+    action="/flights/<%= flight._id %>/tickets"
+    method="POST"
+    >
+    <label for="content-textarea">Seat:</label>
+    <textarea name="content" id="content-textarea"></textarea>
+    <label for="content-textarea">Price:</label>
+    <textarea name="content" id="content-textarea"></textarea>
+    </select>
+    <button type="submit">Add Ticket</button>
+  </form>
 </main>
   
 <%- include('../partials/footer') %>
